# pingapp

./: .gitignore  buildozer.spec  main.py  pyproject.toml
services/: ping_service.py
